finalisation de la page d'acceuil

--- a/sass/layout/city.scss
+++ b/sass/layout/city.scss
@@ -5,7 +5,7 @@
     gap: 16px;
     background-color: #F3F3F3;
     text-align: center;
-    padding: 8px;
+    width: 100vw;
 
     & i{
         font-size: 25px;
