--- a/sass/layout/explorer.scss
+++ b/sass/layout/explorer.scss
@@ -1,13 +1,11 @@
-@use"../utils/box-shadow.scss";
+
+@use "../utils/linear-gradient.scss";
+@use "../layout/box-shadow.scss";
+
+
 
 .explorer{
     text-align: center;
-
-
-& h2{
-    margin-top: 32px;
-    font-size: 24px;
-}
 
 & p{
     font-size:16px;
@@ -19,16 +17,12 @@
     border-radius: 32px;
     font-size: 17px;
     color: white;
-    background: linear-gradient(to top,
-        rgba(147,86,220,0.9),
-        rgba(255,121,218,0.9)
-    );
-  
     border: none;
     transition: transform 200ms;
     margin-top: 10px;
 
     @include box-shadow.base-shadow;
+    @include linear-gradient.gradient(0.9);
 }
 
 
