--- a/sass/base.css
+++ b/sass/base.css
@@ -13,6 +13,20 @@ body {
 }
 
 main {
-  padding: 0 16px;
+  padding: 0 32px;
+}
+
+h2 {
+  padding: 32px 0;
+  margin: 0;
+}
+
+h3, p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 /*# sourceMappingURL=base.css.map */
