--- a/sass/base.scss
+++ b/sass/base.scss
@@ -11,8 +11,23 @@
 body{
     margin: 0;
     font-family: "roboto", sans-serif;
+    
 }
 
 main{
-    padding: 0 16px;
+    padding: 0 32px;
+    
+}
+
+h2{
+    padding: 32px 0;
+    margin: 0;
+}
+
+h3, p{
+    margin:0 ;
+}
+a{
+    text-decoration: none   ;
+    color: inherit;
 }
