--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,8 @@
 @use"./sass/layout/city.scss";
 @use"./sass/layout/explorer.scss";
 @use"./sass/layout/tuto.scss";
+@use "./sass/layout/menus.scss";
+@use"./sass/layout/footer.scss";
 
 
 
