--- a/sass/layout/city.css
+++ b/sass/layout/city.css
@@ -9,12 +9,18 @@
       -ms-flex-pack: center;
           justify-content: center;
   gap: 16px;
-  background-color: #F3F3F3;
+  background-color: #eee;
   text-align: center;
   width: 100vw;
+  height: 15vw;
 }
 
 .city i {
-  font-size: 25px;
+  font-size: 18px;
+}
+
+.city .paris {
+  font-weight: 400;
+  font-size: 18px;
 }
 /*# sourceMappingURL=city.css.map */
