--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -5,16 +5,23 @@ footer{
     padding: 16px 32px;
     color: white;
     margin-top: 80px;
-
+    height: 230px;
+        
+    
 
     h2{
         font-family: "shrikhand", sans-serif;
-        font-weight: 500;
-        padding: 16px   ;
+        font-weight: 400;
+        padding: 1px;
+        font-size: 18px;
+        margin: 5px;
     }
 
     p{
         padding: 5px;
     }
+
+   
+    
 }
 
