--- a/sass/base.scss
+++ b/sass/base.scss
@@ -2,31 +2,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
 
-*,
-::before,
-::after{
-    box-sizing: border-box;
-}
-
 body{
     margin: 0;
     font-family: "roboto", sans-serif;
     
 }
 
-main{
-    padding: 0 32px;
-    
-}
 
-h2{
-    padding: 32px 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    padding:0;
     margin: 0;
 }
 
-h3, p{
-    margin:0 ;
-}
+
+
 a{
     text-decoration: none   ;
     color: inherit;
