--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,11 @@
-@use"./sass/base.scss";
-@use"./sass/layout/header.scss";
-@use"./sass/layout/city.scss";
-@use"./sass/layout/explorer.scss";
-@use"./sass/layout/tuto.scss";
+@use "./sass/base.scss";
+@use "./sass/layout/header.scss";
+@use "./sass/layout/city.scss";
+@use "./sass/layout/explorer.scss";
+@use "./sass/layout/tuto.scss";
 @use "./sass/layout/menus.scss";
-@use"./sass/layout/footer.scss";
-
-
+@use "./sass/layout/footer.scss";
+@use "./sass/pages/restaurant.scss";
 
 
 
