--- a/style.css
+++ b/style.css
@@ -371,7 +371,7 @@ body {
 #page-resto .banner img {
   display: block;
   width: 100%;
-  height: 47vw;
+  height: 65vw;
   object-fit: cover;
   object-position: center;
 }
@@ -495,7 +495,7 @@ body {
   justify-content: center;
   align-items: center;
   background: white;
-  aspect-ratio: 1;
+  height: 32px;
   width: 32px;
   border-radius: 16px;
   color: #99E2D0;
