changement de use en import

--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,11 @@
-@use "./sass/base.scss";
-@use "./sass/layout/header.scss";
-@use "./sass/layout/city.scss";
-@use "./sass/layout/explorer.scss";
-@use "./sass/layout/tuto.scss";
-@use "./sass/layout/menus.scss";
-@use "./sass/layout/footer.scss";
-@use "./sass/pages/restaurant.scss";
+@import "./sass/base.scss";
+@import "./sass/layout/header.scss";
+@import "./sass/layout/city.scss";
+@import "./sass/layout/explorer.scss";
+@import "./sass/layout/tuto.scss";
+@import "./sass/layout/menus.scss";
+@import "./sass/layout/footer.scss";
+@import "./sass/pages/restaurant.scss";
 
 
 
