--- a/sass/layout/menus.scss
+++ b/sass/layout/menus.scss
@@ -56,10 +56,10 @@
         }
 
         &__image-1{
-            background-image: url(./images/restaurants/menu-1.jpg);
+            background-image: url(../../images/restaurants/menu-1.jpg);
         }
         &__image-2{
-            background-image: url(./images/restaurants/menu-2.jpg);
+            background-image: url(../../images/restaurants/menu-2.jpg);
         }
         &__image-3{
             background-image: url(./images/restaurants/menu-3.jpg);
