--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -22,7 +22,8 @@
 }
 
 @mixin base-shadow {
-    box-shadow: 2px 1px 8px -3px #000000;
+    // box-shadow: 2px 1px 8px -3px #000000;
+    box-shadow: 0px 0px 15px 6px #707070;
 }
 
 
