--- a/sass/pages/restaurant.scss
+++ b/sass/pages/restaurant.scss
@@ -10,6 +10,8 @@ body{
 
 }
 
+
+
 .menus h2{
     padding: 25px;
 }
@@ -126,7 +128,7 @@ header::before{
 
     i{
         font-size: 30px;
-        color: black;
+        // color: black;
         position:absolute;
         right: 16px;
         top: 40%;
@@ -140,9 +142,12 @@ header::before{
         -webkit-background-clip: text;
         opacity: 0;
         font-weight: 900;
-        transition: all 200ms ease-in-out;
+        // transition: all 200ms ease-in-out;
 
         @include linear-gradient.gradient(0.9);
+        
+
+        
 
         &:hover .fas{
             opacity: 1;   
