correction du hover sur le heart

--- a/sass/layout/menus.scss
+++ b/sass/layout/menus.scss
@@ -96,19 +96,16 @@
                 background-clip: text;
                 -webkit-background-clip: text;
                 opacity: 0;
-                transition: all 200ms ease-in-out;
+                // transition: all 200ms ease-in-out;
 
                 @include gradient(0.9);
 
             }
 
-            &:hover .fas{
-                opacity: 1;
-                transform:translateY(-50%) scale(1);
-            }
-
-        
-
+             &.fas:hover{
+                    opacity: 1;
+                    transform:translateY(-50%) scale(1);
+                }
 
         }
     
