mofid hover heart sur page menu

--- a/sass/pages/restaurant.scss
+++ b/sass/pages/restaurant.scss
@@ -142,15 +142,14 @@ header::before{
         -webkit-background-clip: text;
         opacity: 0;
         font-weight: 900;
-        transition: all 200ms ease-in-out;
-
-        @include linear-gradient.gradient(0.9);
 
     }
 
 
-    &:hover .fas{
-        opacity: 1;   
+    &.fas:hover {
+        opacity: 1;  
+        transition: all 200ms ease-in-out;
+        @include linear-gradient.gradient(0.9);
     } 
 
    
