--- a/sass/pages/restaurant.scss
+++ b/sass/pages/restaurant.scss
@@ -148,11 +148,10 @@ header::before{
 
     &.fas:hover {
         opacity: 1;  
-        transition: all 200ms ease-in-out;
+        transition: opacity 3.5s 0s ease;
+
         @include linear-gradient.gradient(0.9);
     } 
-
-   
 
 }
 
